# HypermeshLatticeMesher

./: .gitignore  README.md  Taskfile.yml  command1.tcl  command2.tcl  pyproject.toml
.github/workflows/: pylint.yml
HypermeshLatticeMesher/: HypermeshLatticeMesher.py
HypermeshLatticeMesher/data/femFiles/: sphereVoxels1stOrder.fem  sphereVoxels1stOrderNoE.fem
HypermeshLatticeMesher/datastructure/: Element.py  Node.py
HypermeshLatticeMesher/exporter/: HyperWorksStarter.py  ScriptBuilder.py  ScriptBuilderHyperview.py
HypermeshLatticeMesher/exporter/TCLScript/: model1.tcl
HypermeshLatticeMesher/importer/: FemFileReader.py
HypermeshLatticeMesher/tests/: test_Element.py  test_FEMFileReader.py  test_Node.py
hypermesh_lattice_mesher/: main.py
hypermesh_lattice_mesher/data/export/values/: output.txt
hypermesh_lattice_mesher/data/femFiles/: smallModelTet.fem  smallModelTet2nd.fem  sphereShrinkWarp1stOrder.fem
hypermesh_lattice_mesher/data/import/femFiles/: smallModel.fem  smallModel2ndOrder.fem  smallModelLattice.fem  sphereShrinkWarp1stOrder2.fem
hypermesh_lattice_mesher/data/import/values/: smallModelStress.txt
hypermesh_lattice_mesher/datastructure/: Element.py  Node.py  elements.py  materials.py  test_element.py  test_material.py
hypermesh_lattice_mesher/exporter/: HyperWorksStarter.py  ScriptBuilder.py  ScriptBuilderHyperview.py  hyperworks_starter.py  script_builder.py  script_builder_femfile.py  script_builder_hypermesh_tcl.py  script_builder_hyperview.py  test_script_builder_femfile.py  test_script_builder_tcl.py
hypermesh_lattice_mesher/importer/: FemFileReader.py  fem_file_reader.py
hypermesh_lattice_mesher/tests/: test_Element.py  test_FEMFileReader.py  test_Node.py  test_fem_file_reader.py  test_hyperview_run.py  test_material.py  test_script_builder.py  test_script_builder_femfile.py
