[tool.poetry]
name = "hypermesh-lattice-mesher"
version = "0.1.0"
description = "This is a CLI to mesh lattice structures in hypermesh"
authors = ["Manuel Ramsaier <manuel.ramsiaer89@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.9.1"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"
pylint = "^2.14.4"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermesh-lattice-mesher = "hypermesh_lattice_mesher.main:app"

[tool.pylint.message_control]
disable=[
    # Module docstrings are a bit too much
    "missing-module-docstring",
    # Some files use camel-case when a single
    # class is contained. 
    "invalid-name",
    # It was triggered sometimes for imports
    # and sometimes for repeating patterns such
    # as discord commands. Thus not very useful
    # since some code simply repeats, especially
    # in a modular code such as this one.
    "duplicate-code",
    # Enforcing f-strings is too strict
    "consider-using-f-string",
    # TODOs are not to be fixed with every push / pull request
    'fixme'
]

[tool.pylint.basic]
# Test files and classes don't need linting
no-docstring-rgx="^(_|test_|Test)"
good-names=[
    # database variable name
    "db",
    "_"
]

[tool.pylint.exceptions]
overgeneral-exceptions=[
    "BaseException",
    # We allow catching this since it is used in a lot
    # of places and services.
    # "Exception"
]